--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "mongoose": "^6.1.2",
     "nodemon": "^2.0.15"
   }
 }
