[UPDATE] Add API for messaging, Add UI for chat page, Add socket.io in both Front end and backend

--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "backend",
+  "name": "chat-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon backend/server.js"
+    "start": "node backend/server.js",
+    "server": "nodemon backend/server.js"
   },
-  "keywords": [],
+  "keywords": [
+    "mern",
+    "chat-app"
+  ],
   "author": "Vincent",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "express-async-handler": "^1.2.0",
+    "colors": "^1.4.0",
+    "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.2",
-    "nodemon": "^2.0.15"
+    "mongoose": "^5.12.9",
+    "nodemon": "^2.0.7",
+    "socket.io": "^4.1.2"
   }
 }
