--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mongoose": "^5.12.9",
     "nodemon": "^2.0.7",
     "socket.io": "^4.1.2"
-  }
+  },
+  "optionalDependencies": {
+    "fsevents": "2.1.2"
+  },
 }
