--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "nodemon backend/server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
+  "engines": {
+    "node": "16.13.1"
+  },
   "author": "Vincent",
   "license": "ISC",
   "dependencies": {
@@ -19,8 +22,5 @@
     "mongoose": "^5.12.9",
     "nodemon": "^2.0.7",
     "socket.io": "^4.1.2"
-  },
-  "optionalDependencies": {
-    "fsevents": "2.1.2"
   }
 }
